# referal_link_generator

./: README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 4a33e9a11571_1_migration.py  d2ce81e0756e_first_migration.py
app/: __init__.py  crud.py  main.py  models.py  schemas.py  validators.py
app/api/: __init__.py  routers.py
app/api/endpoints/: __init__.py  referral.py  user.py
app/core/: __init__.py  base.py  config.py  database.py  init_db.py  redis.py  user.py
app/crud/: __init__.py  referral.py  user.py
app/models/: __init__.py  referral.py  user.py
app/services/: __init__.py  mail.py  referral.py
infra/: .env.example  Referral Generator.postman_collection.json  run_app.sh
