[tool.poetry]
name = "referral-link-generator"
version = "0.1.0"
description = ""
authors = ["Denis <panasenkodf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.3"}
asyncpg = "^0.29.0"
redis = "^5.0.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.1.1"
flake8-commas = "^2.1.0"
flake8-print = "^5.0.0"
flake8-comments = "^0.1.2"
flake8-docstrings = "^1.7.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
